@@ -70,8 +70,9 @@ def _load_from_file(fname):
 
 
 def _load_from_dir(dname):
-    return map(_load_from_file, [d for d in os.listdir(dname)
-                                 if d.endswith('.json')])
+    return map(_load_from_file,
+               [os.path.join(dname, d) for d in os.listdir(dname)
+                if d.endswith('.json')])
 
 
 def _add_data(resolver, data):
