@@ -1,4 +1,5 @@
 * Version 3.1.1 (unreleased)
+ ** Fix reading attestation data from directories.
 
 * Version 3.1.0 (released 2015-02-02)
  ** Added U2F high-level API.
